--- a/app/views/urls/new.html.erb
+++ b/app/views/urls/new.html.erb
@@ -1,10 +1,14 @@
-<%= form_with model: @url do |form| %>
-  <div>
-    <%= form.label :original, '網址：' %>
-    <%= form.text_field :original %>
-  </div>
+<div class='px-6 py-10 m-auto border rounded border-minor bg-minor bg-opacity-10'>
+  <%= form_with model: @url do |form| %>
+    <div class='flex text-center'>
+      <div>
+        <%= form.label :original, '網址：' %>
+        <%= form.text_field :original, class: 'border-major rounded-l-lg h-8 w-64' %>
+      </div>
 
-  <div>
-    <%= form.submit '送出', class: 'border' %>
-  </div>
-<% end %>
+      <div>
+        <%= form.submit '送出', class: 'bg-major px-2 py-1 rounded-r-lg text-white' %>
+      </div>
+    </div>
+  <% end %>
+</div>
